fixed some spacing issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -100,6 +100,7 @@ footer .footer-link {
     justify-content: space-between;
     width: 100vh;
     margin: 0 auto;
+    margin-top: 260px;
 }
 
 .devblue {
